Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-19912

Long text is not scrolled to beginning when TextInput's cursor position is set to 0

    XMLWordPrintable

Details

    Description

      Long text, which does not fit to TextInput area, is not scrolled to beginning when TextInput's cursor position is set to 0.

      Steps to reproduce:
      -Bind text property to long text string, when activeFocus is false
      -In onTextChanged handler set cursor position to 0
      -Change active focus value to false. Text is not scrolled to beginning.

      See attached test application. Run application with command ./cursorPositionTest Test.qml.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            denexter Andrew den Exter (closed Nokia identity) (Inactive)
            sakauppi Sauli Kauppi
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes