Scroll correctly when cursorPosition is changed within onTextChanged.

Emit textChanged() before adjusting size and scroll positions otherwise
the calculations will be based on the cursor position before it's moved
in handler and because the cursor position won't ultimately have changed
there won't be a follow up cursorPositionChanged() signal to trigger a
second set of calculation.

Task-number: QTBUG-19912
Reviewed-by: Martin Jones
(cherry picked from commit bb11b53bedb8e239b9439b4a3fc3320e35c2de57)

Conflicts:

	src/declarative/graphicsitems/qdeclarativetextinput.cpp

Change-Id: I579bc3fe6c80766dfadfbc9dbd46144607bf7b03
Reviewed-on: http://codereview.qt.nokia.com/2058
Reviewed-by: Qt Sanity Bot <qt_sanity_bot@ovi.com>
Reviewed-by: Andrew den Exter <andrew.den-exter@nokia.com>